--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@nmq/q": "^1.0.0"
+    "@nmq/q": "^1.0.0",
+    "socket.io": "^2.2.0"
   },
   "directories": {
     "doc": "docs"
