--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@nmq/q": "^1.0.0",
+    "faker": "^4.1.0",
     "socket.io": "^2.2.0"
   },
   "directories": {
